--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel watch index.html",
-    "server": "lite-server"
+    "start": "parcel index.html"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +13,6 @@
     "pixi.js": "^4.7.0"
   },
   "devDependencies": {
-    "lite-server": "^2.3.0",
     "parcel-bundler": "^1.6.2"
   }
 }
